tests/baselines/reference/errorSpanForUnclosedJsxTag.errors.txt
tests/cases/compiler/errorSpanForUnclosedJsxTag.tsx(7,14): error TS2304: Cannot find name 'React'.
tests/cases/compiler/errorSpanForUnclosedJsxTag.tsx(7,14): error TS17008: JSX element 'Foo.Bar' has no corresponding closing tag.
tests/cases/compiler/errorSpanForUnclosedJsxTag.tsx(9,13): error TS2304: Cannot find name 'React'.
tests/cases/compiler/errorSpanForUnclosedJsxTag.tsx(9,13): error TS17008: JSX element 'Baz' has no corresponding closing tag.
tests/cases/compiler/errorSpanForUnclosedJsxTag.tsx(9,23): error TS1005: '</' expected.


==== tests/cases/compiler/errorSpanForUnclosedJsxTag.tsx (5 errors) ====
    let Foo = {
      Bar() {}
    }
    
    let Baz = () => {}
    
    let x = <    Foo.Bar >Hello
                 ~~~~~~~
!!! error TS2304: Cannot find name 'React'.
                 ~~~~~~~
!!! error TS17008: JSX element 'Foo.Bar' has no corresponding closing tag.
    
    let y = <   Baz >Hello
                ~~~
!!! error TS2304: Cannot find name 'React'.
                ~~~
!!! error TS17008: JSX element 'Baz' has no corresponding closing tag.
                          
!!! error TS1005: '</' expected.